# stock-market-ai-agents

./: README.md  pyproject.toml
src/stock_market_ai_agents/: crew.py  main.py  utils.py
src/stock_market_ai_agents/config/: agents.yaml  tasks.yaml
src/stock_market_ai_agents/tools/: browser_tools.py  calculator_tools.py  finance_tools.py  search_tools.py
